--- a/demo.html
+++ b/demo.html
@@ -18,6 +18,6 @@
   <input type="text" id="Input" />
   <div id="Output"></div>
   <script src="./dist/TBAEngine.js"></script>
-  <script src="./game.js"></script>
+  <script src="./demo.js"></script>
 </body>
 </html>
