--- a/demo/demo.html
+++ b/demo/demo.html
@@ -18,7 +18,7 @@
 <body>
   <input type="text" id="Input" />
   <div id="Output"></div>
-  <script src="./dist/TBAEngine.js"></script>
+  <script src="../dist/TBAEngine.js"></script>
   <script src="./demo.js"></script>
 </body>
 </html>
